<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="60dp" >

        <Button
            android:id="@+id/change_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/white_black_btn_selector"
            android:drawableLeft="@drawable/ic_changebg"
            android:text="@string/change_style_text"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/yijian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/change_style"
            android:background="@drawable/white_black_btn_selector"
            android:drawableLeft="@drawable/ic_feedback"
            android:text="@string/yijian_text"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/back_main"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back_main_btn_selector" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/more_fragment_up_relative"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/top" >

        <LinearLayout
            android:id="@+id/ic_navigation_up1"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal" >

            <!-- 包流量畅听 -->

            <Button
                android:id="@+id/btn_ic_navigation_more_monthlytraffic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/alpha_white_btn_selector"
                android:drawableTop="@drawable/ic_navigation_more_monthlytraffic"
                android:paddingTop="20dp"
                android:text="@string/btn_ic_navigation_more_monthlytraffic_text"
                android:textSize="@dimen/small_font" />

            <!-- 听歌识曲 -->

            <Button
                android:id="@+id/btn_ic_navigation_more_musichunter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/alpha_white_btn_selector"
                android:drawableTop="@drawable/ic_navigation_more_musichunter"
                android:paddingTop="20dp"
                android:text="@string/btn_ic_navigation_more_musichunter_text"
                android:textSize="@dimen/small_font" />

            <!-- 扫描和传歌 -->

            <Button
                android:id="@+id/btn_ic_navigation_more_scantransfer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/alpha_white_btn_selector"
                android:drawableTop="@drawable/ic_navigation_more_scantransfer"
                android:paddingTop="20dp"
                android:text="@string/btn_ic_navigation_more_scantransfer_text"
                android:textSize="@dimen/small_font" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ic_navigation_up2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_below="@+id/ic_navigation_up1"
            android:orientation="horizontal" >

            <!-- 定时退出 -->

            <Button
                android:id="@+id/btn_ic_navigation_more_musicalarm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/alpha_white_btn_selector"
                android:drawableTop="@drawable/ic_navigation_more_musicalarm"
                android:paddingTop="20dp"
                android:text="@string/btn_ic_navigation_more_musicalarm_text"
                android:textSize="@dimen/small_font" />

            <!-- 音效 -->

            <Button
                android:id="@+id/btn_ic_navigation_more_equalizer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/alpha_white_btn_selector"
                android:drawableTop="@drawable/ic_navigation_more_equalizer"
                android:paddingTop="20dp"
                android:text="@string/btn_ic_navigation_more_equalizer_text"
                android:textSize="@dimen/small_font" />

            <!-- 设置 -->

            <Button
                android:id="@+id/btn_ic_navigation_more_settings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/alpha_white_btn_selector"
                android:drawableTop="@drawable/ic_navigation_more_settings"
                android:paddingTop="20dp"
                android:text="@string/btn_ic_navigation_more_settings_text"
                android:textSize="@dimen/small_font" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/more_fragment_down_relative"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/more_fragment_up_relative"
        android:layout_marginTop="5dp" >

        <LinearLayout
            android:id="@+id/ic_navigation_1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal" >

            <!-- 彩铃 -->

            <Button
                android:id="@+id/btn_ic_navigation_more_crbt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/alpha_white_btn_selector_stroke"
                android:drawableLeft="@drawable/ic_navigation_more_crbt"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/btn_ic_navigation_more_crbt_text" />

            <!-- 铃声 -->

            <Button
                android:id="@+id/btn_ic_navigation_more_kg_ringtone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/alpha_white_btn_selector_stroke"
                android:drawableLeft="@drawable/ic_navigation_more_kg_ringtone"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/btn_ic_navigation_more_kg_ringtone_text" /> 
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ic_navigation_2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/ic_navigation_1"
            android:orientation="horizontal" >

            <!-- 收音机 -->

            <Button
                android:id="@+id/btn_ic_navigation_more_kg_fm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/alpha_white_btn_selector_stroke"
                android:drawableLeft="@drawable/ic_navigation_more_kg_fm"
                android:paddingLeft="40dp"
                android:paddingRight="20dp"
                android:text="@string/btn_ic_navigation_more_kg_fm_text" />

            <!-- K歌女神 -->

            <Button
                android:id="@+id/btn_ic_navigation_more_kg_fx"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/alpha_white_btn_selector_stroke"
                android:drawableLeft="@drawable/ic_navigation_more_kg_fx"
                android:paddingLeft="40dp"
                android:paddingRight="20dp"
                android:text="@string/btn_ic_navigation_more_kg_fx_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ic_navigation_3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/ic_navigation_2"
            android:orientation="horizontal" >

            <!-- 酷游榜 -->

            <Button
                android:id="@+id/btn_ic_navigation_more_kg_kymarket"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/alpha_white_btn_selector_stroke"
                android:drawableLeft="@drawable/ic_navigation_more_kg_kymarket"
                android:paddingLeft="40dp"
                android:paddingRight="20dp"
                android:text="@string/btn_ic_navigation_more_kg_kymarket_text" />

            <Button
                android:id="@+id/btn_ic_navigation_more_logo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_navigation_more_logo"
                android:clickable="false" />
        </LinearLayout>
    </RelativeLayout>

    <!-- 退出 -->

    <Button
        android:id="@+id/more_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/more_fragment_down_relative"
        android:layout_marginTop="5dp"
        android:background="@drawable/alpha_white_btn_selector_stroke"
        android:text="退出酷狗" />

</RelativeLayout>